--- a/app/src/main/res/layout/fragment_sms.xml
+++ b/app/src/main/res/layout/fragment_sms.xml
@@ -11,6 +11,7 @@
             layout="@layout/toolbar" />
 
         <ScrollView
+            android:id="@+id/contPrincipal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/lblGuardSms"
@@ -23,18 +24,19 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/txtSms"
+                    android:id="@+id/lblSms"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="30dp"
                     android:hint="@string/lblMensaje"
-                    android:maxLength="160"
                     app:counterEnabled="true"
                     app:counterMaxLength="160"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtSms"
+                        android:maxLength="160"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:lines="3" />
@@ -53,7 +55,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txtSms" />
+                    app:layout_constraintTop_toBottomOf="@id/lblSms" />
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/filtrosCont"
@@ -66,6 +68,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipCasado"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -74,6 +77,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipSoltero"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -82,6 +86,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipFemenino"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -90,6 +95,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipMasculino"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -98,6 +104,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipLibre"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -106,6 +113,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipViudo"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -114,6 +122,7 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipEdadMax"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -122,13 +131,37 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chipEdadMin"
+                        android:enabled="false"
                         style="@style/Widget.Material3.Chip.Suggestion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblMin"
                         android:visibility="gone" />
 
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/chipTodaEdad"
+                        android:enabled="false"
+                        style="@style/Widget.Material3.Chip.Suggestion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/txtTodaEdad"
+                        android:visibility="gone" />
+
                 </com.google.android.material.chip.ChipGroup>
+
+                <TextView
+                    android:id="@+id/lblPersonas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="center_vertical"
+                    android:text="@string/txtEnvPersonSel"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/filtrosCont" />
 
                 <TextView
                     android:id="@+id/lblGrupos"
@@ -142,10 +175,10 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/filtrosCont" />
+                    app:layout_constraintTop_toBottomOf="@id/lblPersonas" />
 
                 <TextView
-                    android:id="@+id/lblPlantilla"
+                    android:id="@+id/lblPlantillaGuard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
@@ -172,7 +205,7 @@
             android:gravity="center_vertical"
             android:text="@string/txtCrearPlantilla"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@id/txtPlantilla"
+            app:layout_constraintBottom_toTopOf="@id/lblPlantilla"
             app:layout_constraintEnd_toStartOf="@id/switchGuardSms"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -185,40 +218,55 @@
             android:layout_marginEnd="30dp"
             android:checked="false"
             android:contentDescription="@string/el_usuario_es_un_lider"
-            app:layout_constraintBottom_toTopOf="@id/txtPlantilla"
+            app:layout_constraintBottom_toTopOf="@id/lblPlantilla"
             app:layout_constraintEnd_toEndOf="parent"
             app:thumbTint="@color/white" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtPlantilla"
+            android:id="@+id/lblPlantilla"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="10dp"
             android:enabled="false"
             android:hint="@string/lblNomPlantilla"
-            app:layout_constraintBottom_toTopOf="@id/buttonEnviar"
+            app:counterEnabled="true"
+            app:counterMaxLength="50"
+            app:layout_constraintBottom_toTopOf="@id/btnEnviar"
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:maxLength="50"
+                android:id="@+id/txtPlantilla"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/buttonEnviar"
+            android:id="@+id/btnEnviar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="10dp"
-            android:backgroundTint="@color/azulPrincipal"
+            android:backgroundTint="@color/btnDesactivado"
             android:enabled="false"
             android:text="@string/lblBtnEnviarSms"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/onSelectedColorBotBar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
