--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,9 @@
          <action
              android:id="@+id/action_listarFragment_to_pendingFragment"
              app:destination="@id/pendingFragment" />
+         <action
+             android:id="@+id/action_listarFragment_to_smsFragment"
+             app:destination="@id/smsFragment" />
      </fragment>
 
     <fragment
@@ -98,5 +101,10 @@
         <action
             android:id="@+id/action_visualizarUsuarioFragment_to_editarUsuarioFragment"
             app:destination="@id/editarUsuarioFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/smsFragment"
+        android:name="com.example.gestrenacer.SmsFragment"
+        android:label="SmsFragment" >
     </fragment>
 </navigation>
