Check if user's role is Admi

--- a/app/src/main/res/layout/fragment_plantillas_mensajes.xml
+++ b/app/src/main/res/layout/fragment_plantillas_mensajes.xml
@@ -81,7 +81,7 @@
                 android:id="@+id/textViewGrupos"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Grupos predeterminados"
+                android:text="@string/grupos_predeterminados"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="8dp"
@@ -95,7 +95,7 @@
                 android:id="@+id/groupsAutoCompleteTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Type to search"
+                android:hint="@string/escribe_el_nombre_del_grupo"
                 android:inputType="text"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/textViewGrupos"
@@ -111,7 +111,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edittext_background"
                 android:gravity="top"
-                android:hint="Escribe un mensaje"
+                android:hint="@string/escribe_un_mensaje"
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
@@ -122,7 +122,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="¿Deseas crear una plantilla de este mensaje?"
+                android:text="@string/deseas_crear_una_plantilla_de_este_mensaje"
                 app:layout_constraintTop_toBottomOf="@id/etMensaje"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                 app:layout_constraintEnd_toStartOf="@id/switchCrearPlantilla" />
@@ -139,7 +139,7 @@
                 android:id="@+id/etNombrePlantilla"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Nombre de la plantilla"
+                android:hint="@string/nombre_de_la_plantilla"
                 android:layout_marginTop="16dp"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/tvPlantilla"
@@ -150,7 +150,7 @@
                 android:id="@+id/btnEnviar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Enviar"
+                android:text="@string/enviar"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/etNombrePlantilla"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
@@ -160,7 +160,7 @@
                 android:id="@+id/btnCrearPlantilla"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Crear plantilla y enviar"
+                android:text="@string/crear_plantilla_y_enviar"
                 android:layout_marginTop="8dp"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/btnEnviar"
@@ -171,7 +171,7 @@
                 android:id="@+id/tvTituloPlantillas"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Plantillas de mensajes"
+                android:text="@string/plantillas_de_mensajes"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_marginTop="24dp"
