--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -311,6 +311,7 @@
                     android:theme="@style/CheckboxStyle" />
 
                 <TextView
+                    android:id="@+id/gruposTv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
@@ -320,9 +321,11 @@
                     android:fontFamily="@font/roboto_medium"
                     android:text="Grupos predeterminados"
                     android:textSize="20sp"
+                    android:visibility="gone"
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:id="@+id/swithGruposContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -331,6 +334,7 @@
                     android:layout_columnSpan="2"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:visibility="gone"
                     android:padding="16dp">
 
                     <TextView
@@ -360,6 +364,7 @@
                     android:layout_width="match_parent"
                     android:layout_marginStart="40dp"
                     android:layout_marginEnd="40dp"
+                    android:visibility="gone"
                     android:enabled="false"
                     />
 
