--- a/app/src/main/res/layout/fragment_plantillas_mensajes.xml
+++ b/app/src/main/res/layout/fragment_plantillas_mensajes.xml
@@ -45,7 +45,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="653dp"
             android:padding="16dp">
 
             <androidx.constraintlayout.widget.Barrier
@@ -81,28 +81,26 @@
                 android:id="@+id/textViewGrupos"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/grupos_predeterminados"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-                app:layout_constraintTop_toTopOf="parent"
                 android:visibility="gone"
-                />
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <AutoCompleteTextView
                 android:id="@+id/groupsAutoCompleteTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:hint="@string/escribe_el_nombre_del_grupo"
                 android:inputType="text"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/textViewGrupos"
-                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                 android:visibility="gone"
-                />
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+                app:layout_constraintTop_toBottomOf="@id/textViewGrupos" />
 
             <EditText
                 android:id="@+id/etMensaje"
@@ -113,9 +111,9 @@
                 android:gravity="top"
                 android:hint="@string/escribe_un_mensaje"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv"
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv" />
 
             <TextView
                 android:id="@+id/tvPlantilla"
@@ -123,71 +121,75 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/deseas_crear_una_plantilla_de_este_mensaje"
-                app:layout_constraintTop_toBottomOf="@id/etMensaje"
+                app:layout_constraintEnd_toStartOf="@id/switchCrearPlantilla"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toStartOf="@id/switchCrearPlantilla" />
+                app:layout_constraintTop_toBottomOf="@id/etMensaje" />
 
-            <Switch
+            <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switchCrearPlantilla"
+                style="@style/Widget.App.Switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/tvPlantilla"
                 app:layout_constraintBottom_toBottomOf="@id/tvPlantilla"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+                app:layout_constraintTop_toTopOf="@id/tvPlantilla"
+                app:thumbTint="@color/white"/>
 
             <EditText
                 android:id="@+id/etNombrePlantilla"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/nombre_de_la_plantilla"
                 android:layout_marginTop="16dp"
+                android:hint="@string/nombre_de_la_plantilla"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/tvPlantilla"
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintTop_toBottomOf="@id/tvPlantilla" />
 
             <Button
                 android:id="@+id/btnEnviar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/enviar"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/etNombrePlantilla"
+                android:text="@string/enviar"
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintTop_toBottomOf="@id/etNombrePlantilla" />
 
             <Button
                 android:id="@+id/btnCrearPlantilla"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/crear_plantilla_y_enviar"
                 android:layout_marginTop="8dp"
+                android:text="@string/crear_plantilla_y_enviar"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/btnEnviar"
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintTop_toBottomOf="@id/btnEnviar" />
 
             <TextView
                 android:id="@+id/tvTituloPlantillas"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/plantillas_de_mensajes"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@id/btnCrearPlantilla"
+                android:text="@string/plantillas_de_mensajes"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:drawableEnd="@drawable/ic_arrow_up"
+                android:drawablePadding="2dp"
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintTop_toBottomOf="@id/btnCrearPlantilla" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewPlantillas"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tvTituloPlantillas"
-                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+                app:layout_constraintTop_toBottomOf="@id/tvTituloPlantillas" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
