--- a/app/src/main/res/layout/fragment_historial_sms.xml
+++ b/app/src/main/res/layout/fragment_historial_sms.xml
@@ -23,5 +23,16 @@
                 tools:itemCount="2"
                 tools:listitem="@layout/item_sms" />
 
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:indeterminateTint="@color/onSelectedColorBotBar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
