--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -82,7 +82,8 @@
     <fragment
         android:id="@+id/pendingFragment"
         android:name="com.example.gestrenacer.view.fragment.PendingFragment"
-        android:label="PendingFragment" >
+        android:label="PendingFragment"
+        tools:layout="@layout/fragment_pending">
         <action
             android:id="@+id/action_pendingFragment_to_listarFragment"
             app:destination="@id/listarFragment" />
@@ -108,6 +109,15 @@
     <fragment
         android:id="@+id/smsFragment"
         android:name="com.example.gestrenacer.SmsFragment"
-        android:label="SmsFragment" >
+        android:label="SmsFragment"
+        tools:layout="@layout/fragment_sms">
+        <action
+            android:id="@+id/action_smsFragment_to_historialSmsFragment"
+            app:destination="@id/historialSmsFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/historialSmsFragment"
+        android:name="com.example.gestrenacer.view.fragment.HistorialSmsFragment"
+        android:label="HistorialSmsFragment"
+        tools:layout="@layout/fragment_historial_sms"/>
 </navigation>
