--- a/app/src/main/res/layout/fragment_sms.xml
+++ b/app/src/main/res/layout/fragment_sms.xml
@@ -24,6 +24,21 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
+                <Button
+                    style="@style/Widget.Material3.Button.ElevatedButton"
+                    android:id="@+id/btnHistorial"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:icon="@drawable/historial"
+                    app:iconTint="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="@string/lblBtnHistSms"
+                    android:textColor="@color/white"
+                    android:layout_marginEnd="30dp"
+                    android:backgroundTint="@color/onSelectedColorBotBar"
+                    />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lblSms"
                     android:layout_width="match_parent"
@@ -33,7 +48,7 @@
                     app:counterEnabled="true"
                     app:counterMaxLength="160"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv">
+                    app:layout_constraintTop_toBottomOf="@id/btnHistorial">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtSms"
