--- a/app/src/main/res/layout/fragment_historial_sms.xml
+++ b/app/src/main/res/layout/fragment_historial_sms.xml
@@ -23,6 +23,18 @@
                 tools:itemCount="2"
                 tools:listitem="@layout/item_sms" />
 
+            <TextView
+                android:id="@+id/txtNoResultados"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_hay_elementos_a_mostrar"
+                android:textSize="24sp"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
             <ProgressBar
                 android:id="@+id/progress"
                 android:layout_width="wrap_content"
