--- a/app/src/main/res/layout/fragment_sms.xml
+++ b/app/src/main/res/layout/fragment_sms.xml
@@ -23,21 +23,34 @@
                     layout="@layout/toolbar"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
+                <TextView
+                    android:id="@+id/lblTitulo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lblMensajeria"
+                    android:textSize="30sp"
+                    android:fontFamily="@font/roboto_bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/toolbar"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="12dp"
+                    />
 
                 <Button
-                    style="@style/Widget.Material3.Button.ElevatedButton"
+                    style="@style/Widget.Material3.Button.TextButton"
                     android:id="@+id/btnHistorial"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:icon="@drawable/historial"
-                    app:iconTint="@color/white"
-                    app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv"
+                    app:iconTint="@color/black"
+                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:text="@string/lblBtnHistSms"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:layout_marginEnd="30dp"
-                    android:backgroundTint="@color/onSelectedColorBotBar"
-                    />
+                    android:backgroundTint="@color/white"
+                    android:textSize="14sp"
+                    android:layout_marginTop="12dp"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lblSms"
@@ -48,7 +61,7 @@
                     app:counterEnabled="true"
                     app:counterMaxLength="160"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/btnHistorial">
+                    app:layout_constraintTop_toBottomOf="@id/groupsAutoCompleteTv">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtSms"
@@ -219,7 +232,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/toolbar" />
+                    app:layout_constraintTop_toBottomOf="@id/lblTitulo" />
 
                 <AutoCompleteTextView
                     android:id="@+id/groupsAutoCompleteTv"
