--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible">
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -70,7 +70,7 @@
                 android:gravity="center_vertical">
 
                 <Button
-                    style="?attr/materialIconButtonOutlinedStyle"
+                    style="?attr/materialIconButtonStyle"
                     android:id="@+id/iconCancelar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
