--- a/app/src/main/res/layout/item_pending_user.xml
+++ b/app/src/main/res/layout/item_pending_user.xml
@@ -14,7 +14,27 @@
     android:layout_marginTop="15dp"
     android:background="@drawable/borde_negro">
 
-    <TextView
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="35dp">
+
+        <ImageView
+            android:id="@+id/image_perfil"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/borde_redondeado"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo_renacer"
+            />
+
+    </androidx.cardview.widget.CardView>
+
+    <!--<TextView
         android:id="@+id/lblIniciales"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -28,14 +48,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        /> -->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.17" />
+        app:layout_constraintGuide_percent="0.2" />
 
     <TextView
         android:id="@+id/txtNombre"
