--- a/app/src/main/res/layout/fragment_visualizar_usuario.xml
+++ b/app/src/main/res/layout/fragment_visualizar_usuario.xml
@@ -485,6 +485,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:indeterminateTint="@color/onSelectedColorBotBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
